--- a/render.yaml
+++ b/render.yaml
@@ -8,7 +8,7 @@ services:
     
     autoDeploy: true
     
-    healthCheckPath: /
+    healthCheckPath: /health
     
     envVars:
       - key: PORT
