--- a/Modelo/requirements.txt
+++ b/Modelo/requirements.txt
@@ -5,7 +5,7 @@ torch>=1.9.0
 torchvision>=0.10.0
 
 # Procesamiento de imágenes y video
-opencv-python>=4.5.0
+opencv-python-headless>=4.5.0
 numpy>=1.21.0
 Pillow>=8.0.0
 
